# FastAPI-Starter

./: .env  .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  api.py  docker-compose.yaml  pyproject.toml  requirements.txt  worker.py
.github/: pull_request_template.md
alembic/: env.py
alembic/versions/: ab4a8d712280_init.py  bb9a5edbacf8_user.py
apps/: application_docs.py  containers.py
apps/api/auth/: containers.py  controller.py  exception.py  service.py
apps/api/health/: __init__.py  controller.py  serializers.py
apps/api/user/: admin.py  containers.py  controller.py  exception.py  repository.py  service.py
apps/api/user/dto/: request.py  response.py
apps/api/user/schemas/: request.py
apps/commands/: Readme.md  create_superuser.py
apps/core/: Readme.md  admin.py  config.py  lifespan.py
apps/core/auth/: context.py  exception.py  hash.py  token.py
apps/core/common/: config.py  dto.py  response.py
apps/core/database/: db.py
apps/core/database/models/: __init__.py  base.py  user.py
apps/core/exception/: base.py
apps/core/models/: __init__.py  user.py
commands/: setup.sh
migrations/: env.py
migrations/versions/: 2d452525dd35_base_user.py  bce967339ccb_base_user.py
scripts/: build.sh
