[project]
name = "fapi-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.1",
    "bcrypt>=4.3.0",
    "cryptography>=44.0.2",
    "dependency-injector>=4.48.1",
    "fastapi[standard]>=0.115.11",
    "loguru>=0.7.3",
    "pre-commit>=4.1.0",
    "pydantic-settings>=2.8.1",
    "pymysql>=1.1.1",
    "sqlalchemy>=2.0.39",
    "typer>=0.15.2",
]
